Walk down to the lowest mount for "fli_alias".

Address PR kern/54195 (null mounts: panic: ...).